<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/menu_home" />


    <item
        android:id="@+id/nav_current_affairs"
        android:icon="@drawable/ic_news"
        android:visible="false"
        android:title="@string/menu_daily_current_affairs" />


    <item
        android:id="@+id/nav_my_querry"
        android:icon="@drawable/ic_quaree"
        android:title="@string/menu_my_querry" />


    <item
        android:id="@+id/nav_student"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_my_student" />


    <item
        android:id="@+id/nav_contact_us"
        android:icon="@drawable/ic_contact"
        android:title="@string/menu_contact_us" />

    <item
        android:id="@+id/nav_share_app"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_share_app" />


    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_logout" />


</menu>
