<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:checked="true"
        android:icon="@drawable/ic_home_dashboard"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_mock_test"
        android:checked="false"
        android:icon="@drawable/ic_mock_test"
        android:title="@string/activity"
        app:showAsAction="ifRoom" />



    <item
        android:id="@+id/action_doubts"
        android:checked="false"
        android:icon="@drawable/ic_doubtsdash"
        android:title="@string/subjects"
        app:showAsAction="ifRoom" />



    <item
        android:id="@+id/p_profile"
        android:checked="false"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>