<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:titleTextColor="@color/gen_white"
                android:background="@color/colorPrimaryDark"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeuil"
            android:text="Verbal Ability 01"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="42dp"
                android:layout_height="42dp"
                app:srcCompat="@drawable/question_mark" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/imageView5"
                android:layout_toRightOf="@+id/imageView5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/noq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="50"
                    android:textColor="@color/title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Questions"
                    android:textColor="@color/title"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:layout_toStartOf="@+id/time"
                android:layout_toLeftOf="@+id/time"
                app:srcCompat="@drawable/time" />

            <LinearLayout
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="60"
                    android:textColor="@color/title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Minutes"
                    android:textColor="@color/title"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Instructions for Test/ Assignment"
                android:textColor="@color/title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/ins1"
                android:textColor="@color/title"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/ins2"
                android:textColor="@color/title"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/ins3"
                android:textColor="@color/title"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/ins4"
                android:textColor="@color/title"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnsrtets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/segoeuil"
            android:text="Take Test"
            android:textColor="@color/White"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>